objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <description>BMC_BaseElement. CMDB Class that is the CDM common base class (at the top of the inheritance tree) for configuration item (CI) classes. Attributes of this class are inherited by all CI classes. In addition to attributes such as Name that you populate for all CIs, BMC_BaseElement also contains core attributes such as CompareActionCode, which is populated automatically by theCMDB, and CreateDate, which is populated automatically. For relationships, the CDM common base class is BMC_BaseRelationships.  This class corresponds to the DMTF class CIM_ManagedElement.</description>
    <fields>
        <fullName>BMCServiceDesk__Access_Mask__c</fullName>
        <label>Access Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AccountID__c</fullName>
        <label>AccountID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Active_Maximum_Transmission_Unit__c</fullName>
        <label>Active Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ActivityType__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AddressAdditionalInfo__c</fullName>
        <label>Address Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AddressType__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IPv4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AdminPasswordStatus__c</fullName>
        <label>Admin Password Status</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Implemented</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AliasAddresses__c</fullName>
        <label>Alias Addresses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Allocation_Units__c</fullName>
        <label>Allocation Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Altitude__c</fullName>
        <label>Altitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ApplicationType__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StandardApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfrastructureApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClusteredApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompositeApplicaiton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Application_Infrastructure_Type__c</fullName>
        <label>Application Infrastructure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clustered Application Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (default)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Application_Service_Type__c</fullName>
        <label>Application Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>SAP Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J2EE Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J2EE Servlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel Component Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssemblyId__c</fullName>
        <inlineHelpText>This uniquely identifies the assembly associated with this CI</inlineHelpText>
        <label>Assembly ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeDataSourceList__c</fullName>
        <label>AttributeDataSourceList</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Auto_Sense__c</fullName>
        <label>Auto Sense</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableCPs__c</fullName>
        <label>Available CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFAs__c</fullName>
        <label>Available IFAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFCs__c</fullName>
        <label>Available IFCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFLs__c</fullName>
        <label>Available IFLs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Available_Capacity__c</fullName>
        <label>Available Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Available_Space__c</fullName>
        <label>Available Space</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AveragePagesPerMinute__c</fullName>
        <label>Average Pages Per Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BMC_CMDBVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CMDB Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Customer_Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Delivery_Cost__c</fullName>
        <label>Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Battery_Installed__c</fullName>
        <label>Battery Installed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bios_Characteristics__c</fullName>
        <label>BIOS Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BootROMSupported__c</fullName>
        <label>Boot ROM Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bootable__c</fullName>
        <label>Bootable</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildNumber__c</fullName>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildType__c</fullName>
        <label>Build Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BusinessCategory__c</fullName>
        <label>Business Category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Name__c</fullName>
        <label>CFRM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Site_Name__c</fullName>
        <label>CFRM Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CITag__c</fullName>
        <inlineHelpText>Use this field to enter the tag number of the physical entity represented by the instance.</inlineHelpText>
        <label>Asset #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CI_Status__c</fullName>
        <label>CI Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Assembled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decommissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBRowLevelSecurity__c</fullName>
        <label>CMDBRowLevelSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBWriteSecurity__c</fullName>
        <label>CMDBWriteSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMDB_Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>BMC_BaseElements</relationshipLabel>
        <relationshipName>BMC_BaseElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CapabilityList__c</fullName>
        <label>Capability List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_Name__c</fullName>
        <label>Category Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category__c</fullName>
        <label>Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChassisBootupState__c</fullName>
        <label>Chassis Bootup State</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-recoverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-profile desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pizza box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docking Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All-in-one</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subnotebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space-saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main system Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subchassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus-expansion Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peripheral Chassis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassID__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the ID of the class whose instance is being created.</inlineHelpText>
        <label>Class ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the name of the class whose instance is being created.</inlineHelpText>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClientSiteName__c</fullName>
        <label>Client Site Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClusterType__c</fullName>
        <label>Cluster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software Cluster</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftwareServerCluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApplicationInstanceCluster</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CommonName__c</fullName>
        <label>Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CompressionMethod__c</fullName>
        <label>Compression Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Confidentiality__c</fullName>
        <label>Confidentiality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationBasicNumber__c</fullName>
        <label>Configuration Basic Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationOptions__c</fullName>
        <label>Configuration Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityCollectionType__c</fullName>
        <label>Connectivity Collection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConnectivitySegment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPConnectivitySubnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPXConnectivityNetwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCConnectivitySegment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SystemCollection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityStatus__c</fullName>
        <label>Connectivity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity/Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Connectivity/Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partitioned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityType__c</fullName>
        <label>Connectivity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TokenRing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractLineType__c</fullName>
        <label>Contract Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other (0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown (1)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SLA (100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA (200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPC (300).</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractType__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other (0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown (1)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SLA (100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA (200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPC (300)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CoordinateFormat__c</fullName>
        <label>Coordinate Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostDescription__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Named User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Amount__c</fullName>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Derived_Flag__c</fullName>
        <label>Cost Derived Flag</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>